2006-07-01	Benedikt Meurer <benny@xfce.org>

	* thunar-archive-plugin/: Add support for other archive managers than
	  file-roller, using the mime database and an additional .tap wrapper
	  script.
	* configure.in.in, icons/, thunar-archive-plugin/tap-provider.c,
	  Makefile.am: Add icons for the extract and create actions, from
	  the file-roller user interface.
	* configure.in.in, scripts/, Makefile.am: Add wrapper scripts for
	  file-roller and ark; xarchiver should ship the wrapper script as
	  part of its distribution.
	* README: Add documentation about the new framework.
	* po/POTFILES.in: Add tap-backend.c here.
	* po/*.po, po/thunar-archive-plugin.pot: Merge new strings.
	* po/de.po: Update german translations.

2006-06-19	Benedikt Meurer <benny@xfce.org>

	* COPYING: This should be LGPL, as pointed out by Yves-Alexis
	  Perez <corsac@corsac.net>.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* === Released 0.1.2 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Add missing translator credits.
	* po/*.po: Update project version.

2006-03-30	Benedikt Meurer <benny@xfce.org>

	* THANKS, po/LINGUAS, po/ru.po: Add russian translations, thanks to
	  Andrey Fedoseev <andrey.fedoseev@gmail.com>.
	* configure.in.in, thunar-archive-plugin/Makefile.am: Check for
	  thunar-vfs (which depends on libexo).
	* thunar-archive-plugin/tap-provider.c: Schedule a "changed" event
	  after the file-roller command is done, so the folder in which the
	  archive operation was performed is refreshed immediatly without
	  having to wait for FAM/Gamin. Bug #1626.

2006-03-27	Benedikt Meurer <benny@xfce.org>

	* po/LINGUAS: Add 'hu' here.
	* po/de.po, po/hu.po: Update version.
	* THANKS, Makefile.am: Add THANKS file.

2006-03-26	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.1.1svn.

2006-03-26	Benedikt Meurer <benny@xfce.org>
